--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/mern-auth
+MONGO_URI=mongodb+srv://Sowmya:sowmya9005@cluster0.1qeordn.mongodb.net/?appName=Cluster0
 JWT_SECRET=your_jwt_super_secret_key1234
